# Bert-VITS2

./: bert_gen.py  clap_gen.py  clap_wrapper.py  config.py  data_utils.py  preprocess_text.py  pyproject.toml  resample.py  resample_legacy.py  server_fastapi.py  train_ms.py  webui.py
oldVersion/V200/text/: __init__.py  chinese_bert.py  english_bert_mock.py  japanese_bert.py
oldVersion/V210/: emo_gen.py
oldVersion/V210/text/: __init__.py  chinese_bert.py  english_bert_mock.py  japanese_bert.py
onnx_modules/V200/text/: bert_utils.py  chinese_bert.py  english_bert_mock.py  japanese_bert.py
text/: bert_utils.py  chinese_bert.py  english_bert_mock.py  japanese.py  japanese_bert.py
tools/: classify_language.py
