[tool.poetry]
name = "bert-vits2"
version = "1.0.0"
description = ""
authors = ["Lucas <pj-lucas@mixi.co.jp>"]
packages = [
    { include = "**/*" }
]

[tool.poetry.dependencies]
python = ">=3.11.9, <4.0.0"
librosa = "0.9.2"
matplotlib = "*"
numpy = "*"
numba = "*"
phonemizer = "*"
scipy = "*"
tensorboard = "*"
Unidecode = "*"
amfm_decompy = "*"
jieba_fast = "*"
jieba = "*"
transformers = "*"
pypinyin = "*"
cn2an = "*"
# gradio = "3.50.2"
av = "*"
mecab-python3 = "*"
loguru = "*"
unidic-lite = "*"
cmudict = "*"
fugashi = "*"
num2words = "*"
PyYAML = "*"
requests = "*"
pyopenjtalk-prebuilt = "*"
jaconv = "*"
psutil = "*"
GPUtil = "*"
vector_quantize_pytorch = "*"
g2p_en = "*"
sentencepiece = "*"
pykakasi = "*"
langid = "*"
onnxruntime-gpu = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

